# super-ai-team

./: .gitignore  API.md  LICENSE  README.md  main.py  pyproject.toml
.context/: openfang_bridge.py
develop-接入与意图层/feature-意图识别引擎/: main.py
develop-接入与意图层/feature-意图识别引擎/config/: settings.yaml
develop-接入与意图层/feature-意图识别引擎/reference/: classification_chain.py  intent_engine.py  keyword_matcher.py  semantic_retriever.py
develop-接入与意图层/feature-意图识别引擎/src/: main.py  test_all_components.py  test_plugin_loading.py
develop-接入与意图层/feature-意图识别引擎/src/common/: cache.py  config_loader.py  context_manager.py  entity_extractor.py  monitoring.py  template_parser.py  test_config_loader.py
develop-接入与意图层/feature-意图识别引擎/tests/: test_fallback_handler.py  test_weather_handler.py
src/access_intent/adapters/: __init__.py  base.py  webhook.py
src/access_intent/intent/: engine.py  few_shot_learner.py  keyword_matcher.py  semantic_retriever.py
src/access_intent/router/: __init__.py  task_router.py
src/infrastructure/config/: manager.py
src/infrastructure/monitoring/: __init__.py  system.py
src/memory_persistence/context/: __init__.py  manager.py
src/memory_persistence/memory/: __init__.py  mesh.py
src/role_orchestration/roles/: __init__.py  base.py  engineer.py  factory.py
src/skill_execution/executor/: __init__.py  tool_executor.py
src/skill_execution/skills/: __init__.py  base.py  file_operations.py  registry.py  web_search.py
src/skill_execution/tools/: __init__.py  harness.py
tests/: test_intent_engine.py  test_memory_mesh.py  test_skill_registry.py
(+26 files in other folders)
